[metadata]
name = compytetive
version = 0.1.0
description="algorithms and datastructures for competetive programming in python"
url="http://github.com/jensecj/compytetive"
author = J. C. Jensen
author_email = jens@posteo.net

[options]
packages = find:
zip_safe = false
# python_requires = >=3.11
install_requires =
    # numpy
    # scipy
    # networkx
    # sympy

[options.extras_require]
dev = pytest; mypy